# dyno-lab

./: .gitignore  .gitleaks-baseline.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
config/: downstream-repos.toml
config/tachometer/: profile.toml
docs/: contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
src/dyno_lab/: __init__.py  auto_pass.py  base.py  cli.py  env.py  fixtures.py  fs.py  http.py  log.py  markers.py  module.py  patch.py  preflight.py  proc.py  schema.py  smoke.py  time.py
tests/: conftest.py  test_auto_pass.py  test_base.py  test_cli.py  test_env.py  test_fs.py  test_http.py  test_log.py  test_module.py  test_patch.py  test_preflight.py  test_proc.py  test_schema.py  test_smoke.py  test_time.py
